--- a/template/index.pug
+++ b/template/index.pug
@@ -145,22 +145,22 @@ block main
     -
       var bannerList = [
         {
-          image: "assets/Img/banner-1.jpg",
+          image: "assets/Img/Banner-1.jpg",
           title: "Đơn Giản",
           link: "#"
         },
         {
-          image: "assets/Img/banner-2.jpg",
+          image: "assets/Img/Banner-2.jpg",
           title: "Lịch Lãm",
           link: "#"
         },
         {
-          image: "assets/Img/banner-3.jpg",
+          image: "assets/Img/Banner-3.jpg",
           title: "Dạ Hội",
           link: "#"
         },
         {
-          image: "assets/Img/banner-4.jpg",
+          image: "assets/Img/Banner-4.jpg",
           title: "Gym",
           link: "#"
         }
